--- a/PersonalSmartCupAndroid/app/src/main/res/layout/activity_main.xml
+++ b/PersonalSmartCupAndroid/app/src/main/res/layout/activity_main.xml
@@ -15,8 +15,13 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" tools:layout_editor_absoluteY="142dp"
-                tools:layout_editor_absoluteX="124dp" android:id="@+id/textView6" android:text="@string/app_name_chs"
+                tools:layout_editor_absoluteX="124dp" android:id="@+id/test1" android:text="@string/app_name_chs"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                android:layout_above="@+id/textView" android:layout_centerHorizontal="true"/>
+        <TextView
+                android:text="连接状态"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/stateText"
                 android:layout_above="@+id/button2" android:layout_centerHorizontal="true"/>
         <Button
                 android:text="关于作者"
