--- a/PersonalSmartCupAndroid/app/src/main/res/layout/activity_login.xml
+++ b/PersonalSmartCupAndroid/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
             android:layout_marginRight="60dp"
             android:layout_marginLeft="60dp">
         <TextView
-                android:text="账号"
+                android:text="IP地址"
                 android:layout_marginRight="10dp"
                 android:textSize="20sp"
                 android:layout_width="wrap_content"
@@ -29,17 +29,6 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="60dp"
             android:layout_marginLeft="60dp">
-        <TextView
-                android:text="密码"
-                android:layout_marginRight="10dp"
-                android:textSize="20sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        <EditText
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content" android:id="@+id/passwordEdit"
-                android:inputType="textPassword" android:maxLines="1"/>
     </LinearLayout>
     <LinearLayout
             android:orientation="horizontal"
