--- a/PersonalSmartCupAndroid/app/src/main/res/layout/activity_main.xml
+++ b/PersonalSmartCupAndroid/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,8 @@
                 android:layout_height="wrap_content" tools:layout_editor_absoluteY="142dp"
                 tools:layout_editor_absoluteX="124dp" android:id="@+id/test1" android:text="@string/app_name_chs"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-                android:layout_above="@+id/textView" android:layout_centerHorizontal="true"/>
+                android:layout_above="@+id/stateText" android:layout_centerHorizontal="true"
+                android:layout_marginBottom="11dp"/>
         <TextView
                 android:text="连接状态"
                 android:layout_width="wrap_content"
