--- a/PersonalSmartCupAndroid/app/src/main/res/layout/activity_main.xml
+++ b/PersonalSmartCupAndroid/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
                 android:text="连接状态"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/stateText"
-                android:layout_above="@+id/button2" android:layout_centerHorizontal="true"/>
+                android:layout_above="@+id/alarmButton" android:layout_centerHorizontal="true"/>
         <Button
                 android:text="关于作者"
                 android:layout_width="wrap_content"
@@ -35,12 +35,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" tools:layout_editor_absoluteY="183dp"
                 tools:layout_editor_absoluteX="148dp" android:id="@+id/historyButton"
-                android:layout_below="@+id/button2" android:layout_alignStart="@+id/button2"/>
+                android:layout_below="@+id/alarmButton" android:layout_alignStart="@+id/alarmButton"/>
         <Button
                 android:text="喝水提醒"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" tools:layout_editor_absoluteY="231dp"
-                tools:layout_editor_absoluteX="148dp" android:id="@+id/button2"
+                tools:layout_editor_absoluteX="148dp" android:id="@+id/alarmButton"
                 android:layout_centerVertical="true" android:layout_centerHorizontal="true"/>
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
