--- a/PersonalSmartCupAndroid/app/src/main/res/layout/activity_history2.xml
+++ b/PersonalSmartCupAndroid/app/src/main/res/layout/activity_history2.xml
@@ -5,7 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.github.wangxuxin.personalsmartcup.HistoryActivity">
+        tools:context="com.github.wangxuxin.personalsmartcup.History2Activity">
 
     <android.support.design.widget.AppBarLayout
             android:layout_height="wrap_content"
@@ -21,14 +21,14 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_history"/>
+    <include layout="@layout/content_history2"/>
 
     <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab1"
+            android:id="@+id/fab2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
-            app:srcCompat="@android:drawable/ic_media_ff"/>
+            app:srcCompat="@android:drawable/ic_media_rew"/>
 
 </android.support.design.widget.CoordinatorLayout>
